Add roast_agents tool for humorous agent roasting
- New roast_agents tool in tools.py with targeted roasts for all 7 agents
  (Beth, Developer, PM, UX Designer, Researcher, Security Reviewer, Tester)
- Supports roasting individual agents or all at once
- Updated system prompt and CLI banner to include new tool
- Includes prior migration from Azure AI to local Ollama setup

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ OLLAMA_BASE_URL=http://localhost:11434
 # Model to use (must be pulled first with: ollama pull <model>)
 # Good options with tool-calling support:
 #   qwen2.5:7b     - Fast, good tool use (recommended)
-#   qwen2.5:1.5b   - Fastest, for CPU-only setups
 #   llama3.1:8b    - Meta's model, solid tool support
 #   mistral:7b     - Good quality, fast
+#   qwen2.5:14b    - Higher quality, needs more RAM
+#   llama3.1:70b   - Best quality, needs significant RAM/GPU
 OLLAMA_MODEL=qwen2.5:7b
