feat: switch Comedy Arena to Azure OpenAI

--- a/ComedyArena/.env.example
+++ b/ComedyArena/.env.example
@@ -1,2 +1,6 @@
-# Copy this file to .env and fill in your OpenAI API key
-OPENAI_API_KEY=sk-your-key-here
+# Copy this file to .env and fill in your Azure OpenAI settings
+AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
+AZURE_OPENAI_API_KEY=your-azure-openai-key
+AZURE_OPENAI_DEPLOYMENT=your-deployment-name
+# Optional (defaults to 2024-02-01)
+AZURE_OPENAI_API_VERSION=2024-02-01
